<resources>
    <string name="app_name">Lab3-task1</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="sign_up">Sign up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="change_pic">Change Pic</string>
    <string name="todo">TODO</string>
</resources>
